# hal

./: Brewfile  README.md  install_dependencies.sh
cmake/: FindGraphviz.cmake  FindZ3.cmake  detect_dependencies.cmake
include/gui/explorer_widget/: explorer_widget.h
include/gui/graph_widget/: graph_context_manager.h  graph_widget.h  graph_widget_constants.h  graphics_factory.h
include/gui/hal_content_manager/: hal_content_manager.h
include/gui/module_model/: module_item.h
include/gui/module_widget/: module_widget.h
include/gui/netlist_model/: gate_netlist_item.h  module_netlist_item.h  net_netlist_item.h  netlist_item.h  netlist_model.h  netlist_proxy_model.h
include/gui/netlist_relay/: netlist_relay.h
include/gui/spinner_widget/: spinner_widget.h
include/gui/style/: style.h
include/netlist/hdl_parser/: hdl_parser.h  hdl_parser_dispatcher.h  hdl_parser_verilog.h  hdl_parser_verilog_old.h  hdl_parser_vhdl.h  hdl_parser_vhdl_old.h
plugins/sat_solver/: CMakeLists.txt
plugins/sat_solver/include/: plugin_sat_solver.h
plugins/sat_solver/python/: python_bindings.cpp
plugins/sat_solver/src/: plugin_sat_solver.cpp
resources/stylesheet/: test_definitions2
src/gui/: CMakeLists.txt  plugin_gui.cpp
src/gui/explorer_widget/: explorer_widget.cpp
src/gui/graph_widget/: graph_context_manager.cpp  graph_graphics_view.cpp  graph_widget.cpp  graphics_factory.cpp  graphics_scene.cpp
src/gui/hal_content_manager/: hal_content_manager.cpp
src/hdl_parser/: hdl_parser_verilog.cpp
src/netlist/: netlist.cpp
tools/: pydecorator.py  test_pydecorator.py
(+99 files in other folders)
